--- a/index1.html
+++ b/index1.html
@@ -4485,7 +4485,7 @@
                                     <p style="--font-selector:SW50ZXItTWVkaXVt;--framer-font-family:&quot;Inter&quot;, &quot;Inter Placeholder&quot;, sans-serif;--framer-font-size:12px;--framer-font-weight:500" class="framer-text">I hereby confirm that the information provided above is accurate and I agree to </p>
                                     <p style="--font-selector:SW50ZXItTWVkaXVt;--framer-font-family:&quot;Inter&quot;, &quot;Inter Placeholder&quot;, sans-serif;--framer-font-size:12px;--framer-font-weight:500;--framer-text-color:var(--extracted-2gxw0f, rgb(0, 76, 255))" class="framer-text">
                                         <!--$-->
-                                        <a class="framer-text framer-styles-preset-60lvi6" data-styles-preset="Qv04ApeZ_" href="./termes" target="_blank">terms and conditions.</a>
+                                        <a class="framer-text framer-styles-preset-60lvi6" data-styles-preset="Qv04ApeZ_" href="https://vadde-sathvik.github.io/termstkd/" target="_blank">terms and conditions.</a>
                                         <!--/$-->
                                     </p>
                                 </div>
